# fastapi-boilerplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/admin/: auth.py  views.py
app/core/: database.py  dependency.py  exceptions.py  logger.py  metadata.py  security.py  setting.py
app/core/static/: index.html  main.css
app/models/: __init__.py  admin.py  base.py  item.py  post.py  user.py  users.py
app/routers/: auth.py  item.py  user.py  users.py
app/schemas/request/: auth.py  base.py  item.py  user.py
app/schemas/response/: auth.py  base.py  item.py  user.py  users.py
app/services/: auth.py  item.py  user.py  users.py
migrations/: env.py
migrations/versions/: 3ce56626f723_init.py  8e857f9e502a_modify.py  ada508848f93_init_db.py  af49f6576886_admin_add.py  c81683dc778d_init_database.py  c8c020b75d8d_initial_migration.py
tests/: conftest.py
tests/api/: test_main.py
tests/routers/: test_auth.py  test_main.py  test_user.py
tests/utils/: utils.py
