[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
fastapi = "^0.111.1"
redis = "^5.0.7"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
pytest = "^8.3.2"
uvicorn = "^0.30.3"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
pre-commit = "^3.8.0"
ruff = "^0.5.5"
sqladmin = "^0.18.0"
python-jose = "^3.3.0"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
